--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,38 @@
-*{
+#body1{
 text-align: center;
+font-family: helvetica;
+}
+#head{
+  font-size:70px;
+  font-weight:bold;
+}
+
+h6{
+  text-decoration: underline;
+  font-size: 18px;
+}
+#head2{
+  font-size:32px;
+  font-weight:bold;
+}
+h3{
+  font-size:23px;
+  font-weight: bold;
+}
+p{
+  font-sze:14px;
+}
+h5{
+  font-size: 23px;
+  font-weight: bold;
+}
+#botrght{
+  font-size: 11px;
+  background-color: dimgray;
+  color: white;
+  text-align: left;
+}
+#bgimg{
+  background:url("images/the-flatiron-building.png") no-repeat;
+  background-size: cover;
 }
